web-infras/parser/tests/fixtures/esprima/ES6/for-of/invalid-const-init/output.txt
[SyntaxError]: 'for-of' loop variable declaration may not have an initializer. (1,16)
1|for (const x = 1 of y);
 |              ^
